--- a/FontEnd/src/index.html
+++ b/FontEnd/src/index.html
@@ -6,7 +6,7 @@
     <title>Cake Store</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="./assets/img/02/book7-100x128.png">
+    <link rel="icon" type="image/x-icon" href="./assets/img/02/logocake.jpg">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <!-- <link rel="stylesheet" href="../../../../assets/plugins1/bootstrap4/css/bootstrap.min.css"> -->
